# screen-dream

./: .gitignore  .npmrc  Development.md  PLAN.md  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
docs/plans/: 01-core-platform-infrastructure.md  02-screen-capture-recording.md  03-media-editing.md  04-export-sharing.md  05a-migration-rust-ffi.md  05b-migration-qt-core.md  05c-migration-qt-features.md
qt-ui/: CMakeLists.txt
qt-ui/src/: main.cpp
qt-ui/src/core/: AppState.cpp  AppState.h  RustBridge.cpp  RustBridge.h
qt-ui/src/resources/: resources.qrc
qt-ui/src/resources/styles/: dark-theme.qss
qt-ui/src/ui/: MainWindow.cpp  MainWindow.h
qt-ui/src/widgets/: CaptureCard.cpp  CaptureCard.h  RecentCaptures.cpp  RecentCaptures.h  RegionPicker.cpp  RegionPicker.h  SourceBrowser.cpp  SourceBrowser.h
rust-core/: Cargo.toml  drm_capture_helper.c  drm_screenshot.c
rust-core/crates/domain/: Cargo.toml
rust-core/crates/domain/src/capture/: backend.rs  mod.rs  source.rs
rust-core/crates/domain/src/ffmpeg/: codec.rs  mod.rs  provider.rs
rust-core/crates/domain/src/platform/: detect.rs  mod.rs
rust-core/crates/domain/src/settings/: mod.rs  model.rs
rust-core/crates/ffi/: Cargo.toml  build.rs  cbindgen.toml  screen_dream_ffi.h
rust-core/crates/ffi/src/: capture.rs  ffmpeg.rs  lib.rs  platform.rs  recording.rs  settings.rs  types.rs
rust-core/crates/infrastructure/: Cargo.toml
rust-core/crates/infrastructure/src/: lib.rs
rust-core/crates/infrastructure/src/capture/: drm_backend.rs  kwin_backend.rs  mod.rs  pipewire_capture.rs  portal_recorder.rs  portal_screenshot.rs  recording_pipeline.rs  screenshot.rs  spectacle_backend.rs  xcap_backend.rs
rust-core/crates/infrastructure/src/ffmpeg/: probe.rs  process.rs  resolver.rs
rust-core/crates/infrastructure/src/settings/: mod.rs
rust-core/crates/infrastructure/tests/: ffmpeg_resolver_test.rs
rust-core/tests/: run_smoke_test.sh  smoke_test  smoke_test.c
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/crates/domain/src/: app_config.rs  error.rs  lib.rs
src-tauri/crates/domain/src/capture/: recording.rs  source.rs
src-tauri/crates/domain/src/ffmpeg/: command.rs  provider.rs
src-tauri/crates/domain/src/settings/: mod.rs  model.rs  repository.rs
src-tauri/crates/infrastructure/: Cargo.toml
src-tauri/crates/infrastructure/src/: lib.rs
src-tauri/crates/infrastructure/src/capture/: audio_capture.rs  mod.rs  recording_pipeline.rs  xcap_backend.rs
src-tauri/crates/infrastructure/src/ffmpeg/: mod.rs  probe.rs  process.rs  resolver.rs
src-tauri/crates/infrastructure/src/settings/: json_repository.rs
src-tauri/crates/infrastructure/tests/: ffmpeg_resolver_test.rs
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: capture.rs  ffmpeg.rs  mod.rs  platform.rs  settings.rs  shortcuts.rs
src/components/: Layout.tsx  RecordingControls.module.scss  RecordingControls.tsx  RegionSelector.module.scss  RegionSelector.tsx  SourcePicker.module.scss  SourcePicker.tsx  StatusBar.tsx
src/lib/: constants.ts  errors.ts  ipc.ts  types.ts
src/pages/: Home.module.scss  Home.tsx  Settings.tsx
src/stores/: recording.ts  settings.ts
src/styles/: _mixins.scss  _reset.scss  _theme-dark.scss  _theme-light.scss  _utilities.scss  _variables.scss  main.scss
