[workspace]
members = [".", "crates/domain", "crates/infrastructure"]

[package]
name = "screen-dream"
version = "0.1.0"
description = "Screen Dream — cross-platform screen recorder and editor"
authors = ["you"]
license = "GPL-3.0"
edition = "2021"

[lib]
name = "screen_dream_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
domain = { path = "crates/domain" }
infrastructure = { path = "crates/infrastructure" }
