[workspace]
members = [".", "crates/domain", "crates/infrastructure"]

[package]
name = "screen-dream"
version = "0.1.0"
description = "Screen Dream — cross-platform screen recorder and editor"
authors = ["you"]
license = "GPL-3.0"
edition = "2021"

[lib]
name = "screen_dream_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
domain = { path = "crates/domain" }
infrastructure = { path = "crates/infrastructure" }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-clipboard-manager = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["time"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
