[package]
name = "ffi"
version = "0.1.0"
edition = "2021"

[lib]
name = "screen_dream_ffi"
crate-type = ["cdylib"]

[dependencies]
domain = { path = "../domain" }
infrastructure = { path = "../infrastructure" }
dirs = "6"
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
cbindgen = "0.27"
