[package]
name = "infrastructure"
version = "0.1.0"
edition = "2021"

[dependencies]
domain = { path = "../domain" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "io-util", "fs", "sync", "rt", "time"] }
dirs = "6"
which = "7"
tracing = "0.1"
xcap = "0.9"
image = "0.25"
cpal = "0.15"
hound = "3.5"
bytemuck = { version = "1", features = ["derive"] }
base64 = "0.22"
zbus = { version = "5", default-features = false, features = ["tokio"] }
nix = { version = "0.29", features = ["fs"] }
ashpd = { version = "0.11", default-features = false, features = ["tokio"] }
futures-util = "0.3"
pipewire = "0.9"

[dev-dependencies]
tempfile = "3"
